# carimbo

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.py  conanfile.txt  mise.toml  requirements.txt
.github/workflows/: artifacts.yaml  build.yam_  build.yaml  codeql.yaml  lint.yam_  lint.yaml  release.yaml
assets/: index.html  pack.go
assets/demo/scripts/: main.lua  types.lua
assets/playground/blob/: matrix.avif
assets/sandbox/scripts/: main.lua
src/: anchor.hpp  application.cpp  application.hpp  audiodevice.cpp  audiodevice.hpp  audiomanager.cpp  audiomanager.hpp  color.cpp  color.hpp  common.hpp  constants.hpp  debugger.cpp  debugger.hpp  delay.cpp  delay.hpp  deleter.hpp  deleters.hpp  effect.cpp  effect.hpp  engine.cpp  engine.hpp  enginefactory.cpp  enginefactory.hpp  entity.cpp  entity.hpp  entitymanager.cpp  entitymanager.hpp  entityprops.hpp  event.hpp  eventmanager.cpp  eventmanager.hpp  eventreceiver.cpp  eventreceiver.hpp  file.cpp  file.hpp  filesystem.cpp  filesystem.hpp  flip.hpp  font.cpp  font.hpp  (+84 more)
